revert previous removal of sortable which broke it

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -89,7 +89,7 @@
     "message": "New Folder..."
   },
   "newInstall1": {
-    "message": "Get started with YASD-remix"
+    "message": "Get started with Yet Another Speed Dial!"
   },
   "newInstall2": {
     "message": "⭐ Add sites by clicking the button below, or add bookmarks to the Speed Dial folder"
