--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -89,7 +89,7 @@
     "message": "Nueva Carpeta..."
   },
   "newInstall1": {
-    "message": "¡Empiece con YASD-remix"
+    "message": "¡Empiece con Yet Another Speed Dial!"
   },
   "newInstall2": {
     "message": "⭐ Agregue sitios haciendo clic en el botón de abajo, o cree un marcador en la carpeta Marcación rápida"
