--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -89,7 +89,7 @@
     "message": "Nouveau Dossier..."
   },
   "newInstall1": {
-    "message": "Lancez-vous avec YASD-remix"
+    "message": "Lancez-vous avec Yet Another Speed Dial!"
   },
   "newInstall2": {
     "message": "⭐ Ajoutez des sites en cliquant sur le bouton ci-dessous, ou créez un signet dans le dossier Speed Dial"
