--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -89,7 +89,7 @@
     "message": "Nuovo Cartella..."
   },
   "newInstall1": {
-    "message": "Inizia con YASD-remix"
+    "message": "Inizia con Yet Another Speed Dial!"
   },
   "newInstall2": {
     "message": "⭐ Aggiungi siti facendo clic sul pulsante in basso o crea un segnalibro nella cartella Chiamata rapida"
