--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -65,7 +65,7 @@
     "message": "Импорт настроек..."
   },
   "importExport": {
-    "message": "Это создаст резервную копию или восстановит настройки и миниатюры YASD.\n\nОбратите внимание, что все номера быстрого набора управляются браузером как закладки. Убедитесь, что они сохранены отдельно через диспетчер закладок или синхронизацию.\n\nВНИМАНИЕ: Импорт заменит ваши текущие настройки."
+    "message": "Это создаст резервную копию или восстановит настройки и миниатюры SSD.\n\nОбратите внимание, что все номера быстрого набора управляются браузером как закладки. Убедитесь, что они сохранены отдельно через диспетчер закладок или синхронизацию.\n\nВНИМАНИЕ: Импорт заменит ваши текущие настройки."
   },
   "importExportLink": {
     "message": "Импорт и экспорт..."
@@ -89,7 +89,7 @@
     "message": "Новая папка..."
   },
   "newInstall1": {
-    "message": "Начни с Yet Another Speed Dial!"
+    "message": "Начни с Simple Speed Dial!"
   },
   "newInstall2": {
     "message": "⭐ Добавьте сайты, нажав кнопку ниже, или создайте закладку в папке «Быстрый набор»."
