--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -65,7 +65,7 @@
     "message": "Import Settings..."
   },
   "importExport": {
-    "message": "This will backup or restore SSD settings and thumbnails.\n\nNote, all speed dials are managed by the browser as bookmarks. Make sure they are backed up separately via the bookmarks manager or sync.\n\nWARNING: Importing will replace your current settings."
+    "message": "This will backup or restore GSD settings and thumbnails.\n\nNote, all speed dials are managed by the browser as bookmarks. Make sure they are backed up separately via the bookmarks manager or sync.\n\nWARNING: Importing will replace your current settings."
   },
   "importExportLink": {
     "message": "Import and Export..."
