--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -65,7 +65,7 @@
     "message": "Импорт настроек..."
   },
   "importExport": {
-    "message": "Это создаст резервную копию или восстановит настройки и миниатюры SSD.\n\nОбратите внимание, что все номера быстрого набора управляются браузером как закладки. Убедитесь, что они сохранены отдельно через диспетчер закладок или синхронизацию.\n\nВНИМАНИЕ: Импорт заменит ваши текущие настройки."
+    "message": "Это создаст резервную копию или восстановит настройки и миниатюры GSD.\n\nОбратите внимание, что все номера быстрого набора управляются браузером как закладки. Убедитесь, что они сохранены отдельно через диспетчер закладок или синхронизацию.\n\nВНИМАНИЕ: Импорт заменит ваши текущие настройки."
   },
   "importExportLink": {
     "message": "Импорт и экспорт..."
