--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -65,7 +65,7 @@
     "message": "Importer les paramètres..."
   },
   "importExport": {
-    "message": "Cela sauvegardera ou restaurera les paramètres et les vignettes SSD.\n\nNotez que tous les numéros abrégés sont gérés par le navigateur sous forme de signets. Assurez-vous qu'ils sont sauvegardés séparément via le gestionnaire de signets ou la synchronisation.\n\nAVERTISSEMENT : L'importation remplacera vos paramètres actuels."
+    "message": "Cela sauvegardera ou restaurera les paramètres et les vignettes GSD.\n\nNotez que tous les numéros abrégés sont gérés par le navigateur sous forme de signets. Assurez-vous qu'ils sont sauvegardés séparément via le gestionnaire de signets ou la synchronisation.\n\nAVERTISSEMENT : L'importation remplacera vos paramètres actuels."
   },
   "importExportLink": {
     "message": "Importer et exporter..."
