--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -65,7 +65,7 @@
     "message": "Importa impostazioni..."
   },
   "importExport": {
-    "message": "Ciò eseguirà il backup o il ripristino delle impostazioni e delle miniature SSD.\n\nNota, tutte le chiamate rapide sono gestite dal browser come segnalibri. Assicurati che venga eseguito il backup separatamente tramite il gestore dei segnalibri o la sincronizzazione.\n\nATTENZIONE: l'importazione sostituirà le impostazioni correnti."
+    "message": "Ciò eseguirà il backup o il ripristino delle impostazioni e delle miniature GSD.\n\nNota, tutte le chiamate rapide sono gestite dal browser come segnalibri. Assicurati che venga eseguito il backup separatamente tramite il gestore dei segnalibri o la sincronizzazione.\n\nATTENZIONE: l'importazione sostituirà le impostazioni correnti."
   },
   "importExportLink": {
     "message": "Importazione e esportazione..."
