--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -89,10 +89,10 @@
     "message": "Nueva Carpeta..."
   },
   "newInstall1": {
-    "message": "¡Empiece con Simple Speed Dial!"
+    "message": "¡Empiece con Giddy's Speed Dial!"
   },
   "newInstall2": {
-    "message": "⭐ Agregue sitios haciendo clic en el botón de abajo, o cree un marcador en la carpeta Marcación rápida"
+    "message": "⭐ Agregue marcadores a la carpeta o subcarpetas de Marcación rápida utilizando la función Marcador de su navegador"
   },
   "newInstall3": {
     "message": "✨ Los diales se pueden modificar haciendo clic derecho sobre ellos"
