--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -89,10 +89,10 @@
     "message": "Nouveau Dossier..."
   },
   "newInstall1": {
-    "message": "Lancez-vous avec Simple Speed Dial!"
+    "message": "Lancez-vous avec Giddy's Speed Dial!"
   },
   "newInstall2": {
-    "message": "⭐ Ajoutez des sites en cliquant sur le bouton ci-dessous, ou créez un signet dans le dossier Speed Dial"
+    "message": "⭐ Ajoutez des signets au dossier ou aux sous-dossiers de numérotation rapide à l'aide de la fonction Favoris de votre navigateur."
   },
   "newInstall3": {
     "message": "✨ Les cadrans peuvent être modifiés en faisant un clic droit"
