--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -89,10 +89,10 @@
     "message": "Nuovo Cartella..."
   },
   "newInstall1": {
-    "message": "Inizia con Simple Speed Dial!"
+    "message": "Inizia con Giddy's Speed Dial!"
   },
   "newInstall2": {
-    "message": "⭐ Aggiungi siti facendo clic sul pulsante in basso o crea un segnalibro nella cartella Chiamata rapida"
+    "message": "⭐ Aggiungere segnalibri alla cartella o alle sottocartelle di Composizione rapida utilizzando la funzione Segnalibro del browser"
   },
   "newInstall3": {
     "message": "✨ I quadranti possono essere modificati facendo clic con il tasto destro su di essi"
