--- a/src/_locales/pt/messages.json
+++ b/src/_locales/pt/messages.json
@@ -92,7 +92,7 @@
     "message": "Comece com mais uma discagem rápida!"
   },
   "newInstall2": {
-    "message": "⭐ Adicione sites clicando no botão abaixo ou adicione favoritos à pasta Discagem Rápida"
+    "message": "⭐ Adicione marcadores à pasta ou subpastas do Speed Dial usando a função Marcador do seu navegador"
   },
   "newInstall3": {
     "message": "✨ Os mostradores podem ser modificados clicando com o botão direito do mouse neles"
