--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -53,7 +53,7 @@
   },
   "extensionName": {
     "description": "title of the app, displayed in store",
-    "message": "Simple Speed Dial"
+    "message": "Giddy's Speed Dial"
   },
   "help": {
     "message": "Hilfe"
@@ -89,10 +89,10 @@
     "message": "Neuer Ordner..."
   },
   "newInstall1": {
-    "message": "Erste Schritte mit Simple Speed Dial"
+    "message": "Erste Schritte mit Giddy's Speed Dial"
   },
   "newInstall2": {
-    "message": "⭐ Fügen Sie Websites hinzu, indem Sie auf die Schaltfläche unten klicken, oder erstellen Sie ein Lesezeichen im Speed Dial Ordner"
+    "message": "⭐ Fügen Sie Lesezeichen zum Kurzwahlordner oder zu Unterordnern hinzu, indem Sie die Lesezeichenfunktion Ihres Browsers verwenden"
   },
   "newInstall3": {
     "message": "✨ Zifferblätter können durch Rechtsklick darauf geändert werden"
