--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -89,7 +89,7 @@
     "message": "Новая папка..."
   },
   "newInstall1": {
-    "message": "Начни с Simple Speed Dial!"
+    "message": "Начни с Giddy's Speed Dial!"
   },
   "newInstall2": {
     "message": "⭐ Добавьте сайты, нажав кнопку ниже, или создайте закладку в папке «Быстрый набор»."
